# python_data_science

Python-0/ex00/: Hello.py
Python-0/ex01/: format_ft_time.py
Python-0/ex02/: find_ft_type.py  tester.py
Python-0/ex03/: NULL_not_found.py  tester.py
Python-0/ex04/: whatis.py
Python-0/ex05/: building.py
Python-0/ex06/: filterstring.py  ft_filter.py
Python-0/ex07/: sos.py
Python-0/ex08/: Loading.py
Python-0/ex09/: README.md  pyproject.toml  tester.py
Python-0/ex09/src/ft_package.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Python-1/ex00/: give_bmi.py  tester.py
Python-1/ex01/: array2D.py  give_bmi.py
Python-1/ex03/: load_image.py  zoom.py
Python-1/ex04/: rotate.py
Python-1/ex05/: load_image.py  pimp_image.py
Python-2/ex00/: load_csv.py
Python-2/ex01/: aff_life.py
Python-2/ex02/: aff_pop.py
Python-2/ex03/: projection_life.py
Python-3/ex00/: tester.py
Python-3/ex01/: S1E7.py  tester.py
Python-3/ex02/: DiamondTrap.py  S1E7.py  S1E9.py
Python-3/ex03/: ft_calculator.py
Python-3/ex04/: ft_calculator.py
Python-4/ex00/: statistics.py  tester.py
Python-4/ex01/: in_out.py
Python-4/ex02/: callLimit.py
Python-4/ex03/: new_student.py
ex01/: format_ft_time.py
ex02/: find_ft_type.py
