[project]
name = "ft_package"
version = "0.0.1"
authors = [
    { name="Ethan", email="ethanlimwl@gmail.com" },
]
description = "A small package by Ethan hehe"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "MIT"}
classifiers = [
    "Programming Langyage :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"


 